refactor: minor refactor